add calculation for checkout items
