# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/product": {
+        "/order/checkout": {
             "post": {
                 "description": "Get User By Id",
                 "produces": [
@@ -17,7 +17,7 @@
                         "name": "product_name",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/request.ProductRequest"
+                            "$ref": "#/definitions/request.OrderRequest"
                         }
                     }
                 ],
@@ -59,11 +59,14 @@
                 }
             }
         },
-        "request.ProductRequest": {
+        "request.OrderRequest": {
             "type": "object",
             "properties": {
-                "name": {
-                    "type": "string"
+                "product_id": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
                 }
             }
         }
