# main.go
@@ -22,7 +22,7 @@ func main() {
 	productController := controller.NewOrderController(productService)
 
 	docs.SwaggerInfo.Title = "Ana Store - Environment: "
-	docs.SwaggerInfo.Description = "API for product service"
+	docs.SwaggerInfo.Description = "API for order service"
 	docs.SwaggerInfo.Version = "1.0"
 	docs.SwaggerInfo.Host = os.Getenv("swagger_host")
 	docs.SwaggerInfo.Schemes = []string{"http", "https"}
@@ -31,10 +31,10 @@ func main() {
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	// Define your routes
-	router.POST("/product", productController.CheckoutItems)
+	router.POST("/order/checkout", productController.CheckoutItems)
 
 	// Start the server
-	if err := router.Run(":8081"); err != nil {
+	if err := router.Run(":8082"); err != nil {
 		log.Fatalf("Failed to start server: %v", err)
 	}
 }
