# request/Order.go
@@ -1,0 +1,6 @@
+package request
+
+type OrderRequest struct {
+	ProductID int `json:"product_id"`
+	Quantity  int `json:"quantity"`
+}
